added planet assets

--- a/solar-system/views/index.html
+++ b/solar-system/views/index.html
@@ -11,52 +11,47 @@
 <body>
 	<div class="system">
 		<div class="system__orbit system__orbit--sun">
-			<img src="https://www.dropbox.com/s/g02pto204mz1ywi/sun.png?raw=1" alt="Sun" class="system__icon system__icon--sun">
+			<img src="./assets/images/planet/sun.png" alt="Sun" class="system__icon system__icon--sun">
 		</div>
-		
+
 		<div class="system__orbit system__orbit--mercury">
 			<div class="system__planet system__planet--mercury">
-				<img src="https://www.dropbox.com/s/2o38602cmwhhdi1/mercury.png?raw=1" alt="Mercury">
+				<img src="./assets/images/planet/mercury.png" alt="Mercury">
 			</div>
 		</div>
 		<div class="system__orbit system__orbit--venus">
 			<div class="system__planet system__planet--venus">
-				<img src="https://www.dropbox.com/s/wvictuysutiirho/venus.png?raw=1" alt="Venus">
+				<img src="./assets/images/planet/venus.png" alt="Venus">
 			</div>
 		</div>
 		<div class="system__orbit system__orbit--earth">
 			<div class="system__planet system__planet--earth">
-				<img src="https://www.dropbox.com/s/ropzlyhb1v19l5t/earth.png?raw=1" alt="Earth">
+				<img src="./assets/images/planet/earth.png" alt="Earth">
 			</div>
 		</div>
 		<div class="system__orbit system__orbit--mars">
 			<div class="system__planet system__planet--mars">
-				<img src="https://www.dropbox.com/s/fa9biyj617n1q30/mars.png?raw=1" alt="Mars">
+				<img src="./assets/images/planet/mars.png" alt="Mars">
 			</div>
 		</div>
 		<div class="system__orbit system__orbit--jupiter">
 			<div class="system__planet system__planet--jupiter">
-				<img src="https://www.dropbox.com/s/d28oxi2c74zcoqk/jupiter.png?raw=1" alt="Jupiter">
+				<img src="./assets/images/planet/jupiter.png" alt="Jupiter">
 			</div>
 		</div>
 		<div class="system__orbit system__orbit--saturn">
 			<div class="system__planet system__planet--saturn">
-				<img src="https://www.dropbox.com/s/h8pj72v6mmaa0yq/saturn.png?raw=1" alt="Saturn">
+				<img src="./assets/images/planet/saturn.png" alt="Saturn">
 			</div>
 		</div>
 		<div class="system__orbit system__orbit--uranus">
 			<div class="system__planet system__planet--uranus">
-				<img src="https://www.dropbox.com/s/du6znsmfos2r4ry/uranus.png?raw=1" alt="Uranus">
+				<img src="./assets/images/planet/uranus.png" alt="Uranus">
 			</div>
 		</div>
 		<div class="system__orbit system__orbit--neptune">
 			<div class="system__planet system__planet--neptune">
-				<img src="https://www.dropbox.com/s/170sr7xl6gxpona/neptune.png?raw=1" alt="Neptune">
-			</div>
-		</div>
-		<div class="system__orbit system__orbit--pluto">
-			<div class="system__planet system__planet--pluto">
-				<img src="https://www.dropbox.com/s/z7axkafhs887t9b/pluto.png?raw=1" alt="Pluto">
+				<img src="./assets/images/planet/neptune.png" alt="Neptune">
 			</div>
 		</div>
 	</div>
