--- a/cassette-animation/public/templates/partials/header.ejs
+++ b/cassette-animation/public/templates/partials/header.ejs
@@ -11,8 +11,8 @@
 <body>
 
 	<div class="header__page">
-		<div class="box">
-			<h3>My Cassete</h3>
+		<div class="header__text">
+			<h3><%= header_text%></h3>
 		</div>
 	</div>
 
