--- a/parallax-animation/views/pages/index.hbs
+++ b/parallax-animation/views/pages/index.hbs
@@ -1,3 +1,4 @@
+{{!-- Start with hero content --}}
 <div class="hero">
   <div class="parallax-layer layer-6"></div>
   <div class="parallax-layer layer-5"></div>
