--- a/favorite-time-of-the-day/views/index.pug
+++ b/favorite-time-of-the-day/views/index.pug
@@ -86,5 +86,6 @@ html
 				.option(data-option="sunset") Sunset
 				.option(data-option="night") Night
 
+		// script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js')
 
 		script(type='text/javascript', src='js/script.js')
