--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,19 +10,47 @@
       -ms-flex-align: start;
           align-items: flex-start;
   left: 0;
+  position: relative;
 }
 .home__content .box__content .column__1 {
   background-color: #ff01de;
   height: 50vh;
   width: 30%;
+  position: relative;
+  margin-right: 1rem;
+}
+.home__content .box__content .column__1 h1 {
+  margin-top: 7rem;
+  margin-left: 3rem;
+  width: 50px;
+  height: 50px;
+  color: white;
 }
 .home__content .box__content .column__2 {
   background-color: #cedf00;
   height: 50vh;
   width: 30%;
+  position: relative;
+  margin-right: 1rem;
+}
+.home__content .box__content .column__2 h1 {
+  margin-top: 7rem;
+  margin-left: 3rem;
+  width: 50px;
+  height: 50px;
+  color: white;
 }
 .home__content .box__content .column__3 {
   background-color: #013efa;
   height: 50vh;
   width: 30%;
+  position: relative;
+  margin-right: 1rem;
+}
+.home__content .box__content .column__3 h1 {
+  margin-top: 7rem;
+  margin-left: 3rem;
+  width: 50px;
+  height: 50px;
+  color: white;
 }
