--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,17 +1,27 @@
-@import '_variable.scss';
+@import "_variable.scss";
 
-.home__content{
-    .box__content{
-        display: flex;
-        flex-direction:row;
-        align-items: flex-start;
-        left:0;
-        @each $column-bg, $i in $column-bg {
-            .#{$column-bg}{
-                background-color: $i;
-                height: 50vh;
-                width: 30%;
-            }
+.home__content {
+  .box__content {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    left: 0;
+    position: relative;
+    @each $column-bg, $i in $column-bg {
+      .#{$column-bg} {
+        background-color: $i;
+        height: 50vh;
+        width: 30%;
+        position: relative;
+        margin-right: 1rem;
+        h1 {
+          margin-top: 7rem;
+          margin-left: 3rem;
+          width: 50px;
+          height: 50px;
+          color: white;
         }
+      }
     }
+  }
 }
