css papper-fold

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,13 +13,15 @@
   -webkit-clip-path: polygon(10% 0%, 100% 0%, 100%, 100%, 0% 100%, 0% 50%);
           clip-path: polygon(10% 0%, 100% 0%, 100%, 100%, 0% 100%, 0% 50%);
   border-bottom-right-radius: 23px;
+  margin-left: 2rem;
+}
+.papper__fold h4 {
   text-align: center;
   text-transform: uppercase;
   font-size: 16px;
   font-family: "Rubik", sans-serif;
   font-weight: 700;
   color: #fff;
-  margin-left: 2rem;
 }
 .papper__fold:before {
   content: "";
@@ -43,4 +45,10 @@
 .papper__fold:hover {
   -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%, 0% 0%);
           clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%, 0% 0%);
+}
+
+@media (min-width: 992px) {
+  .papper__fold {
+    width: 20%;
+  }
 }
