--- a/scss/app.scss
+++ b/scss/app.scss
@@ -11,13 +11,16 @@
   transition: 0.5s;
   clip-path: polygon(10% 0%, 100% 0%, 100%, 100%, 0% 100%, 0% 50%);
   border-bottom-right-radius: 23px;
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 16px;
-  font-family: "Rubik", sans-serif;
-  font-weight: 700;
-  color: #fff;
   margin-left: 2rem;
+  h4 {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-family: "Rubik", sans-serif;
+    font-weight: 700;
+    color: #fff;
+  }
+
   &:before {
     content: "";
     position: absolute;
@@ -43,5 +46,11 @@
   }
   &:hover {
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%, 0% 0%);
+  }
+}
+
+@media (min-width: 992px) {
+  .papper__fold {
+    width: 20%;
   }
 }
