--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,7 +4,6 @@
   width: 30%;
   padding-top: 0;
   padding-bottom: 0;
-  line-height: 45px;
   background-color: #000cdd;
   border: 0px;
   cursor: pointer;
@@ -22,6 +21,9 @@
   font-family: "Rubik", sans-serif;
   font-weight: 700;
   color: #fff;
+  line-height: 10px;
+  padding-left: 7px;
+  padding-top: 5px;
 }
 .papper__fold:before {
   content: "";
@@ -49,6 +51,6 @@
 
 @media (min-width: 992px) {
   .papper__fold {
-    width: 20%;
+    width: 15%;
   }
 }
