--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,7 +21,7 @@
   color: #fff;
   line-height: 10px;
   padding-left: 7px;
-  padding-top: 1px;
+  padding-top: 2px;
 }
 .papper__fold:before {
   content: "";
@@ -50,5 +50,9 @@
 @media (min-width: 992px) {
   .papper__fold {
     width: 15%;
+  }
+  .papper__fold h4 {
+    padding-top: 5px;
+    padding-left: 5px;
   }
 }
