--- a/scss/app.scss
+++ b/scss/app.scss
@@ -9,6 +9,7 @@
   clip-path: polygon(10% 0%, 100% 0%, 100%, 100%, 0% 100%, 0% 50%);
   border-bottom-right-radius: 23px;
   margin-left: 2rem;
+
   h4 {
     text-align: center;
     text-transform: uppercase;
@@ -18,7 +19,7 @@
     color: #fff;
     line-height: 10px;
     padding-left: 7px;
-    padding-top: 1px;
+    padding-top: 2px;
   }
 
   &:before {
@@ -44,6 +45,7 @@
     width: 0px;
     height: 0px;
   }
+
   &:hover {
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%, 0% 0%);
   }
@@ -52,5 +54,9 @@
 @media (min-width: 992px) {
   .papper__fold {
     width: 15%;
+    h4 {
+      padding-top: 5px;
+      padding-left: 5px;
+    }
   }
 }
